# sqlite3-build

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
